--- a/roygbiv/web/index.html
+++ b/roygbiv/web/index.html
@@ -23,7 +23,7 @@
         <script src="js/brain.js"></script>
 		<script src="js/boxplot.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
-		
+
 	</head>
 
 	<body>
@@ -61,8 +61,8 @@
                         }
                         $scope.$apply();
                     },
-                    manifest_url: 'data/lh_files_to_load.json',
-                    label_mapper: "data/labels.json"
+                    manifest_url: 'viz/manifest.json',
+                    label_mapper: "viz/labels.json"
                 });
 			}]);
 		</script>
