wip: can install the roygbiv python package and launch server from command line

--- a/roygbiv/web/index.html
+++ b/roygbiv/web/index.html
@@ -61,7 +61,7 @@
                         }
                         $scope.$apply();
                     },
-                    manifest_url: 'viz/manifest.json',
+                    manifest_url: 'viz/lh/lh_manifest.json',
                     label_mapper: "viz/labels.json"
                 });
 			}]);
